# data_platform

./: .gitignore  DEPLOYMENT.md  Makefile  QUICKSTART.md  README.md  bfmap_ways.csv  docker-compose.dev.yml  docker-compose.yml  implementation_guide.md  project_context.md  session__line.md  spec.md  test_system.md
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: main.py  schemas.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/db/: models.py
backend/app/etl/: load_data.py
backend/app/services/: chart_query_service.py  heatmap_query_service.py  ingest_service.py  query_service.py  road_mapping_service.py  road_network_service.py  route_capability_service.py  route_payload_service.py  route_persistence_service.py  route_search_service.py  route_service.py  stats_service.py  summary_query_service.py
backend/app/utils/: geo.py
backend/migrations/: README.md
backend/tests/: conftest.py  test_api_contract.py  test_api_regression.py  test_data_regression.py  test_ingest_pipeline.py  test_ingest_road_mapping_build.py  test_ingest_validation.py  test_pipeline_modes_ingest.py  test_route_capability.py  test_route_database_search.py  test_route_graph_regression.py  test_stats_orchestration.py  test_stats_refresh.py
docs/: pgrouting_environment.md
frontend/: .env.example  Dockerfile  README.md  package-lock.json  package.json  tsconfig.test.json  vite.config.ts
scripts/: prepare_data.sh  regression.sh  smoke.sh  start.sh  stop.sh
session_records/: session_20260326_120357.md  session_20260330_120425.md  (+1 more)
(+12 files in other folders)
