[project]
name = "harbin-traffic-api"
version = "0.1.0"
description = "Harbin vehicle journey analytics API"
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "python-dotenv>=1.0",
  "h5py>=3.11",
  "numpy>=2.2",
  "networkx>=3.4",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "httpx>=0.27",
]
